<resources>
    <string name="app_name">Popular Movies</string>

    <string name="popular">Most Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="favorites">Favorites</string>
    <string name="ratings">Ratings:</string>
    <string name="release_date">Release date:</string>
    <string name="plot">Overview</string>
    <string name="trailer">Trailer</string>
    <string name="review">Review</string>

    <string name="movie_poster">Movie Poster</string>
    <string name="movie_title">Movie Title</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,
        when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="error_internet">Internet not available. Check your internet connectivity and try again</string>
    <string name="info">Info</string>
    <string name="ok">OK</string>

    <string name="favorite_added">Movie added into favorites</string>
    <string name="favorive_removed">Movie removed from favorites</string>

    <string name="error">Something wrong happened!</string>
    <string name="dash">"-"</string>

    <string name="loading">Loading</string>
    <string name="msg_loading">Downloading data…</string>
</resources>
